--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: c
-sudo: True
 before_install:
     - wget https://github.com/libcheck/check/files/71408/check-0.10.0.tar.gz
     - tar -xvf check-0.10.0.tar.gz
     - cd check-0.10.0
     - ./configure
     - make
-    - sudo make install
+    - export LD_LIBRARY_PATH=$(pwd)/check-0.10.0/src/.libs:$LD_LIBRARY_PATH
     - cd ..
