--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: c
+
+# Build and install libcheck 0.10.0
+# TODO: Replace when Travis supports `xenial` Ubuntu distribution
 before_install:
     - wget https://github.com/libcheck/check/files/71408/check-0.10.0.tar.gz
     - tar -xvf check-0.10.0.tar.gz
@@ -6,7 +9,5 @@ before_install:
     - ./configure
     - make
     - sudo make install
-    #- export CPATH=$(pwd)/src:$CPATH
-    #- export LD_LIBRARY_PATH=$(pwd)/src/.libs:$LD_LIBRARY_PATH
     - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
     - cd ..
